# Earmark

./: .gitignore  AGENTS.MD  README.md  docker-compose.yml  prd.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
Earmark/: Dockerfile  composer.json  docker-compose.yml  package-lock.json  package.json
Earmark-parser/: Dockerfile  README.md  pyproject.toml
Earmark-parser/earmark_parser/: __init__.py  app.py  contract.py  parser.py  security.py
Earmark-parser/tests/: test_contract.py
Earmark-web/: .dockerignore  Dockerfile  composer.json  package-lock.json  vite.config.ts
Earmark-web/app/Models/: Bucket.php  BucketAssignment.php  Category.php  Transaction.php  TransactionSplit.php
Earmark-web/config/: fortify.php  services.php
Earmark-web/database/factories/: AccountFactory.php  BucketFactory.php  CategoryFactory.php  TransactionFactory.php
Earmark-web/database/migrations/: 2026_05_24_000001_create_finance_tables.php
Earmark-web/database/seeders/: DatabaseSeeder.php
Earmark-web/docs/: architecture-design-patterns.md
Earmark-web/docs/plans/: prd-v1-implementation-plan.md
Earmark-web/routes/: web.php
Earmark-web/tests/Feature/: DashboardTest.php  FinanceSchemaTest.php  HouseholdSetupCrudTest.php  TransactionCrudTest.php  TransactionSplitTest.php
Earmark/app/Concerns/: GeneratesUniqueHouseholdSlugs.php  HasHousehold.php
Earmark/app/Data/: HouseholdPermissions.php
Earmark/app/Enums/: HouseholdRole.php  (+1 more)
Earmark/config/: fortify.php
Earmark/docker/: entrypoint.sh
Earmark/docs/: architecture-livewire.md
Earmark/routes/: web.php
(+96 files in other folders)
