[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "earmark-parser"
version = "0.1.0"
description = "FastAPI PDF parser service for Earmark statement imports"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["earmark_parser*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
